<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvOops"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/oops_text"
        android:textSize="32sp"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvIncorrectLogin"
        app:layout_constraintVertical_chainStyle="packed"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvIncorrectLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/incorrect_login_text"
        android:textSize="32sp"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnTryAgain" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnTryAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/try_again"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvIncorrectLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>